# PreditorAndPrey-Qt

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  board.cpp  board.h  cellular.pro  main.cpp  moc_board.cpp
src/: main.cpp  predator_and_prey.cpp  predator_and_prey.h
